# calimero-bug

./: .gitignore  README.md  deploy_devnet_addon.sh  deploy_devnet_fresh.sh  dfx.json
backend/: main.mo
context-config/: Cargo.toml  calimero_context_config_icp.wasm  canister_ids.json  deploy_devnet.sh
context-config/res/: calimero_context_config_icp.wasm
context-proxy/: Cargo.toml  calimero_context_proxy_icp.wasm
context-proxy/mock/ledger/res/: calimero_mock_ledger_icp.wasm
context-proxy/res/: calimero_context_proxy_icp.candid  calimero_context_proxy_icp.wasm
wasms/: backend.wasm
