[package]
name = "calimero-context-config-icp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[profile.app-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
bs58 = "0.5.0"
calimero-context-config = { git = "https://github.com/calimero-network/core", branch = "master", features = ["icp"] }
candid = "0.10.10"
ed25519-dalek = "2.1.1"
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"

[dev-dependencies]
pocket-ic = "6.0.0"
rand = "0.8"
ed25519-dalek = "2.0"
