[package]
name = "calimero-context-proxy-icp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[profile.app-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
bs58 = "0.5.0"
calimero-context-config = { git = "https://github.com/calimero-network/core", branch = "master", features = ["icp"] }
candid = { version = "0.10", features = ["value"] }
ed25519-dalek = "2.1.1"
hex = "0.4.3"
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-ledger-types = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
pocket-ic = "6.0.0"
rand = "0.8"
reqwest = { version = "0.10.10", features = ["blocking"] }
flate2 = "1.0.35"
